# SIMS-MRI

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: oasis.yaml  oasis_ngp.yaml  oasis_ngp_rigid.yaml
scripts/: preprocessing_brain.py  setup_upstreams.sh
src/sims_mri/: __init__.py  experiment_utils.py  hash_embeddings.py  hash_encoder_wrapper_freenerf.py  loader.py  utils.py
src/sims_mri/training/: __init__.py  phase1_generation.py  phase2_registration.py  phase3_mixed_training.py
